# movie-tracker

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/api/v1/: health.py  movies.py
app/models/: movies.py
app/repositories/: base_repository.py  movies_repository.py
app/schemas/: movies.py
app/services/: movies_service.py
