[tool.poetry]
name = "movie-tracker"
version = "0.1.0"
description = ""
authors = ["Dimitris Tagkalos <dtagkalos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
