[tool.poetry]
name = "movie-tracker"
version = "0.1.0"
description = ""
authors = ["Dimitris Tagkalos <dtagkalos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
ruff = "^0.12.7"
pre-commit = "^4.2.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ["py313"]



[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "B", "UP"]
exclude = ["tests/*"]